# Dao-examples

./: .ghci  .gitignore  Dao-examples.cabal  Makefile  README.md
src/Dao/Examples/: FuzzyStrings.hs  Numbers.hs  Ontology.hs
